corrected alignment

--- a/scss/imports/_mainSection.scss
+++ b/scss/imports/_mainSection.scss
@@ -18,7 +18,8 @@
 
 .tagline p {
   margin-top: 0;
-  font-size: 20px;
+  font-size: 32px;
+  margin-top: 150px;
   @media (min-width: $screen-width-sm){
     font-size: 49px;
     font-weight: bold;
