--- a/scss/imports/_mobileNav.scss
+++ b/scss/imports/_mobileNav.scss
@@ -1,14 +1,23 @@
+@media (max-width: $screen-width-sm) {
+  #sean-ryan {
+    display: none;
+  }
+  .nav-ul {
+    margin-top: 170px;
+    text-align: center;
+  }
+}
+
 .nav-bar-container {
   h1 {
     // font-size: 2rem;
     font-weight: 1000;
     letter-spacing: 2px;
-    margin-top: 2rem;
-    margin-left: 2rem;
+    margin-top: 1rem;
+    margin-left: 116px;
+    width: max-content;
     @media(min-width: $screen-width-sm){
       font-size: 46px;
-      margin-top: 1rem;
-      margin-left: 46px;
     }
   }
   h1:hover {
@@ -46,20 +55,18 @@
 .nav-home {
   @media(min-width: $screen-width-sm){
     width: 16rem;
-    margin-left: 4rem;
   }
 }
 
 .nav-ul {
   list-style: none;
-  padding: 0;
+  padding: 0 115px;
 }
 
 .nav-ul > li {
   text-transform: uppercase;
   letter-spacing: 4px;
   margin-top: 2rem;
-  margin-left: 13%;
   @media(min-width: $screen-width-md){
     margin: 30px auto;
   };
