--- a/scss/imports/_projects.scss
+++ b/scss/imports/_projects.scss
@@ -23,8 +23,9 @@
     }
 }
 
-#projectsSectionTitle {
+#project-section-title {
     color: $black-lpc;
+    margin-left: 115px;
 }
 
 .projectContainer {
